# 7.module

exe/: CMakeLists.txt
exe/src/: main.cpp
lib/: CMakeLists.txt
lib/src/: matrix.cpp  matrix.h
lib/src/c/: c_api.cpp  c_api.h
lib/src/test/: test-shared-matrix.cpp  test-static-matrix.cpp
